--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="row">
 
                     <div class="col-md-5">
-                    <img class="aboutImage" src="img/MeSuit.jpg">
+                    <img class="aboutImage" src="img/MeSuit.JPG">
                     </div>
                     <div class="col-md-7">
 
