--- a/Contact.html
+++ b/Contact.html
@@ -68,8 +68,8 @@
                     <br><br><h3>Contact Info:</h3><br>
                     <p>ChristopherTheDev@gmail.com</p>
                     <p>(407)761-9707</p>
-                    <a href="https://www.instagram.com/xtopherdev/"><h3 class="fab fa-github-square" style="color:#444"></h3></a>
-                    <a href="https://www.instagram.com/xtopherdev/"><h3 class="fab fa-linkedin" style="color:#444"></h3></a>
+                    <a href="https://github.com/ChristopherTheDevCo"><h3 class="fab fa-github-square" style="color:#444"></h3></a>
+                    <a href="https://www.linkedin.com/in/matthew-williams-8bb09a101/"><h3 class="fab fa-linkedin" style="color:#444"></h3></a>
                     <a href="https://twitter.com/XtopherTheDev"><h3 class="fab fa-twitter-square" style="color:#444"></h3></a>
                     <a href="https://www.instagram.com/xtopherdev/"><h3 class="fab fa-instagram-square" style="color:#444"></h3></a>
                 </div> 
